feat: 补充后台聚合统计与筛选接口支持